# pcm_backend

./: .dockerignore  .stylelintrc.json  Dockerfile  README.md  biome.json  hello.py  index.html  manage.py  nvimconfig.lua  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.app.json  vite.config.ts
athletes/: admin.py  models.py  serializers.py  urls.py  views.py
athletes/migrations/: 0001_initial.py  0002_rename_school_year_athlete_class_of_and_more.py  0003_alter_athlete_height_inches_alter_athlete_interests_and_more.py  0004_alter_sportstat_sport.py  0005_athlete_gallery_athlete_image_gallery.py  0006_alter_athlete_gallery.py  0007_remove_athlete_gallery.py  0008_gallery_alt.py  0009_athlete_tags.py  0010_athlete_position.py  0011_sport_icon_alter_athlete_tags.py  0012_athlete_tagline.py
hello/: urls.py  views.py
pcm_backend/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
src/: About.css  About.tsx  App.tsx  AthleteProfile.css  AthleteProfile.tsx  Athletes.css  Athletes.tsx  Components.css  Components.tsx  Contact.css  Contact.tsx  Home.css  Home.tsx  Layout.tsx  fetch.ts  index.css  main.tsx
src/components/: Button.css  Button.tsx  CallToAction.css  CallToAction.tsx
src/lib/: QuestionAnswerContext.ts
src/lib/assets/: homepage_video.webm
src/lib/components/: AboutVideo.css  AboutVideo.tsx  AthleteCard.css  AthleteCard.tsx  AthleteCarousel.css  AthleteCarousel.tsx  AthleteGrid.css  AthleteGrid.tsx  Button.css  Button.tsx  CallToAction.css  CallToAction.tsx  ContactForm.css  ContactForm.tsx  ContactInfo.css  ContactInfo.tsx  (+37 more)
(+1 files in other folders)
